--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 beautifulsoup4==4.13.4
+dj-database-url==2.2.0
 Django==3.2.25
 django-autocomplete-light==3.12.1
 django-bootstrap-form==3.4
