--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-asgiref==3.7.2
-beautifulsoup4==4.13.4
-dj-database-url==2.2.0
-Django==3.2.25
-django-autocomplete-light==3.12.1
-django-bootstrap-form==3.4
-importlib-metadata==2.1.3
-numpy==1.21.6
-pandas==1.3.5
-psycopg2-binary==2.9.9
-python-dateutil==2.9.0.post0
-python-dotenv==0.21.1
-pytz==2025.2
-six==1.17.0
-soupsieve==2.4.1
-sqlparse==0.4.4
-typing_extensions==4.7.1
-zipp==3.15.0
+asgiref>=3.7.2
+beautifulsoup4>=4.13.4
+dj-database-url>=2.2.0
+Django>=3.2.25,<4.0
+django-autocomplete-light>=3.12.1
+django-bootstrap-form>=3.4
+importlib-metadata>=2.1.3
+numpy>=1.21.6
+pandas>=1.3.5
+psycopg2-binary>=2.9.9
+python-dateutil>=2.9.0.post0
+python-dotenv>=0.21.1
+pytz>=2025.2
+six>=1.17.0
+soupsieve>=2.4.1
+sqlparse>=0.4.4
+typing_extensions>=4.7.1
+zipp>=3.15.0
