--- a/.env.prod
+++ b/.env.prod
@@ -6,4 +6,4 @@ DEBUG = False
 
 ALLOWED_HOSTS=pp2m.onrender.com
 
-DATABASE_URL=
+DATABASE_URL=postgresql://pp2m_db_user:ZrkGYAzHbKDUK7V9BLdyqWls8Hngd65a@dpg-d0n0o8qli9vc73fvgha0-a.frankfurt-postgres.render.com/pp2m_db
