--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url>=2.2.0
 Django>=3.2.25,<4.0
 django-autocomplete-light>=3.12.1
 django-bootstrap-form>=3.4
+gunicorn>=20.1.0
 importlib-metadata>=2.1.3
 numpy>=1.21.6
 pandas>=1.3.5
